--- a/3/style.css
+++ b/3/style.css
@@ -3,6 +3,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 #nav {
   float: left;
   background-color: lightgray;
@@ -10,17 +11,20 @@
   min-height: 620px;
   padding: 10px;
 }
+
 #content {
   float: left;
   padding: 20px;
   width: 800px;
 }
+
 #content-centered {
   margin-left: 25%;
   margin-right: 25%;
   padding: 20px;
   width: 1000px;
 }
+
 #footer {
   clear: both;
   background-color: black;
@@ -28,6 +32,7 @@
   text-align: center;
   padding: 20px;
 }
+
 .logo {
   font-size: 44px;
   font-weight: 700;
@@ -38,10 +43,12 @@
   margin-top: 50px;
   margin-bottom: 40px;
 }
+
 #topnav {
   background-color: #1c74b2;
   text-align: center;
 }
+
 .menu {
   list-style-type: none;
   margin: 0;
@@ -51,14 +58,14 @@
   line-height: 200%;
 }
 
-.menu > li {
+.menu>li {
   display: inline-block;
   padding-left: 20px;
   padding-right: 20px;
   border-right: 1px dashed #0a2b42;
 }
 
-.menu > li:first-child {
+.menu>li:first-child {
   border-left: 1px dashed #0a2b42;
 }
 
@@ -70,6 +77,7 @@
 .menu a:hover {
   color: #0a2b42;
 }
+
 body {
   background-color: lightslategray;
 }
@@ -156,4 +164,18 @@ td {
 
 #selection {
   display: table;
+}
+
+dt {
+  font-size: 20pt;
+  color: #1c74b2;
+}
+
+dd {
+  font-size: 20px;
+}
+
+.pageHeader {
+  font-size: 200%;
+  color: rgb(33, 59, 143);
 }
