--- a/3/style.css
+++ b/3/style.css
@@ -237,7 +237,7 @@ a[href^="index"] {
 
 @media screen and (max-width: 900px) {
   body {
-    background-image: url("https://www.mining.com/wp-content/uploads/2018/08/unnamed.jpg");
+    background-image: url("https://friendlystock.com/wp-content/uploads/2019/02/0-easter-eggs-cartoon-clipart.jpg");
     background-repeat: repeat;
     background-size: 50%;
   }
