--- a/3/style.css
+++ b/3/style.css
@@ -235,11 +235,9 @@ a[href^="index"] {
   font-weight: bold;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
   body {
-    background-image: url("https://friendlystock.com/wp-content/uploads/2019/02/0-easter-eggs-cartoon-clipart.jpg");
-    background-repeat: repeat;
-    background-size: 50%;
+    background-color: red;
   }
 }
 
