--- a/3/style.css
+++ b/3/style.css
@@ -106,6 +106,7 @@ img {
   width: 200px;
   height: 200px;
   border: 2px solid black;
+  border-image: url(https://www.w3schools.com/cssref/border.png) 30 round;
 }
 
 .inner {
@@ -243,4 +244,47 @@ a[href^="index"] {
 
 .novisible {
   visibility: hidden;
+}
+
+.dropbtn {
+  background-color: #1c74b2;
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+  line-height: 200%;
+  min-height: 38px
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #1c74b2;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  min-height: 38px;
+  line-height: 200%;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #1c74b2;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #1c74b2;
 }
